src/css/editable.less
.mathquill-editable {
  .inline-block;
  .mathquill-root-block {
    .inline-block;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    // this is to make sure that characters like "y" aren't cut off
    padding-left: 5px;
    margin-left: -5px;

    vertical-align: middle;
    &:after {
      content: '';
      display: inline-block;
      width: 1px;
    }
  }

  .mq-cursor {
    margin-right: -1px;
    position: relative;
    z-index: 1;
    padding: 0;
    .inline-block;

    .mq-line { border-left: 1px solid black; }
    &.mq-blink .mq-line { visibility: hidden; }
  }

  .mq-handle-anchor {
    .inline-block;
    position: relative;

    .mq-handle {
      display: inline-block;
      -webkit-transform-origin: 10px -25px;
      -webkit-transform: translateX(.5px);
      opacity: .5;

      position: absolute;
      z-index: 1;
      left: -10px;

      &:before, &:after {
        content: '';
        position: absolute;
      }

      // square handle body
      width: 20px;
      height: 20px;
      background: black;
      bottom: -40px;

      // triangle tip
      &:before {
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-bottom: 10px solid black;
        top: -10px;
        left: 0;
        // cover occasional subpixel (floating-point rounding error?) gap
        -webkit-transform: translateY(.2px); // between tip and body
      }

      // invisible embiggened hit box / touch target
      &:after {
        width: 40px;
        height: 40px;
        left: -10px;
        bottom: -10px;
      }
    }
  }

  // special styles for editables within static math
  .mathquill-rendered-math & {
    margin: 1px;
    border: 1px solid gray;
    padding: 2px;
  }

  ////
  // command input with \
  .mq-latex-command-input {
    color: inherit;
    font-family: @mono;
    border: 1px solid gray;
    padding-right: 1px;
    margin-right: 1px;
    margin-left: 2px;

    &.mq-empty {
      background: transparent;
    }

    // TODO: dasherize has-cursor
    &.mq-hasCursor {
      border-color: ActiveBorder;
    }
  }
}

// Keeps blocks from collapsing to zero width/height
// when empty by inserting invisible text.
// TODO: find a way to unify the three concepts below.
.mathquill-root-block.mq-empty:after,
.mathquill-textbox:after,
.mathquill-rendered-math .mq-empty:after {
  content: '';
  width: .5em;
  display: inline-block;
}

// separated from above because unrecognized pseudoclasses
// invalidate the entire selector
.mathquill-editable .mq-cursor:only-child:after {
  width: .5em;
  display: inline-block;
  content: '';
}

.mathquill-textbox {
  overflow-x: auto;

  // so IE8 won't show a vertical scrollbar
  overflow-y: hidden;
}

